--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,20 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
-    compileOptions.encoding = 'windows-1251'
+    buildToolsVersion "24.0.0"
     useLibrary  'org.apache.http.legacy'
+    compileOptions.encoding = 'windows-1251'
+
+
     defaultConfig {
-        applicationId "framgia.vn.barcodecompare"
-        minSdkVersion 17
+        applicationId "com.example.toanpc.barcodecompare"
+        minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -22,14 +25,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.journeyapps:zxing-android-embedded:3.3.0'
-    compile 'com.google.zxing:core:3.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.3.0'
+    compile 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
+    compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
+    compile 'com.google.zxing:core:3.0.1'
+    compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'com.android.support:design:24.0.0'
 }
